--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,8 +18,14 @@
         <li><%= link_to "Contact", contact_path %></li>
         <li><%= link_to "Watch Page", watch_path %></li>
 
-          <li><%= link_to "Upload" %></li>
+        <% if user_signed_in? %>
+            <li><%= link_to "Upload" %></li>
+            
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
 
+            <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 
