--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
 
 <%= render 'layouts/header' %>
 	<div class="container">
+
+		<% flash.each do |name, msg| %>
+     		<%= content_tag(:div, msg, class: "alert alert-info") %>
+		<% end %>
+
 		<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 			<p>KingVideo is still under construction and the site may not work <s>properly</s> at all!</p>
 		</div>
