Style Changes + Change Log

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	<div class="col-md-8">
-		<p>I'm the about us page</p> 
+		<p>KingVideo is a site created by King601 in order to provide a way that's better than YouTube to interact with the viewers. </p> 
 	</div>
 	
   </div>
