--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,25 +5,11 @@
 		<h1>Welcome to KingVideo!</h1>
 	</div>
 	<p>This page will be full of video thumbnails or some shit to represent a video... eventually.</p>
-	<div class="alert alert-info">
-		<p>KingVideo is still under construction and the site may not work properly!</p>
-	</div>	<div class="alert alert-warning">
-		<p>KingVideo is still under construction and the site may not work properly!</p>
-	</div>
+		<div class="alert alert-warning">
+			<p>KingVideo is still under construction and the site may not work properly!</p>
+		</div>
 
 
-	<div class="panel panel-primary">
-		<div class="panel-heading">
-			<h5>v.0.0.1.5 - 11/26/2013</h5>
-		</div>
-		<div class="panel-body">
-			<p><strong>Things Changed:</strong></p>
-			<ul>
-				<li>Cleaned up backend code a tad</li>
-				<li><strong>Added New <%= link_to 'World Download' %> 8:22pm 11/26</strong></li>
-			</ul>
-		</div>
-	</div>
 <!---
 	<table class="table table-bordered table-striped">
 		<tr>
