--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
     <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", contact_path %></li>
-        <li><%= link_to "Watch Page", watch_path %></li>
+        <li><%= link_to "Update Notes", change_log_path %></li>
                 <li><%= link_to "Support Us", watch_path %></li>
 
       <li class="dropdown">
