--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,11 +5,14 @@
 		<h1>Welcome to KingVideo!</h1>
 	</div>
 	<p>This page will be full of video thumbnails or some shit to represent a video... eventually.</p>
-		<div class="alert alert-warning">
-			<p>KingVideo is still under construction and the site may not work properly!</p>
-		</div>
-
-
+	Hehe
+<img src="http://placehold.it/320x180">
+<img src="http://placehold.it/160x90">
+<img src="http://placehold.it/160x90">
+<img src="http://placehold.it/160x90">
+<img src="http://placehold.it/160x90">
+<img src="http://placehold.it/160x90">
+<img src="http://placehold.it/160x90">
 <!---
 	<table class="table table-bordered table-striped">
 		<tr>
