--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,18 +13,22 @@
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", about_path %></li>
-        <li><%= link_to "Contact", contact_path %></li>
-        <li><%= link_to "Watch Page", watch_path %></li>
-
+    <ul class="nav navbar-nav navbar-left">
         <% if user_signed_in? %>
-            <li><%= link_to "Upload" %></li>
-            
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
+          <li><%= link_to "Manager" %></li>
+        <% end %>
+    </ul>
 
-            <li><%= link_to "Login", new_user_session_path %></li>
+    <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Videos", videos_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Upload" %></li>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "Video Mockup", watch_path %></li>
+        <% else %>
+          <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
