--- a/app/views/pages/change_log.html.erb
+++ b/app/views/pages/change_log.html.erb
@@ -3,6 +3,7 @@
 		<h1>Change Log</h1>
 	</div>
 
-			<p>This page reflects the changes we make to our site. It is not automatically updated and has to be done manually. It may not be up to date, though we will try to keep it updated.</p>
+			<p>This page reflects the changes we make to our site. It is not automatically updated and has to be done manually. It may not be up to date, though we will try to keep it updated. If you would like to see where we are headed you want to view our 
+			<%= link_to 'Road Map', roadmap_path %></p>
 			<%= render 'pages/change_log' %>
 </div>
