Add Terms Controller for AUP/Privacy policy

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Terms and Policies", contact_path %></li>
+              <li><%= link_to "Terms and Policies", terms_path %></li>
               <li><%= link_to "Change Log", change_log_path %></li>
               <li><%= link_to "Support Us", watch_path %></li>
           </ul>
