Update changelog 2.15 before Branch change

--- a/app/views/pages/_change_log.html.erb
+++ b/app/views/pages/_change_log.html.erb
@@ -1,5 +1,22 @@
 	<div class="panel panel-info">
 		<div class="panel-heading">
+			<h5><strong>v.0.0.2 - 02/15/2014</strong></h5>
+		</div>
+		<div class="panel-body">
+			<p><strong>Things Added:</strong></p>
+			<ul>
+				<li><%= link_to 'RoadMap', roadmap_path %></li>
+				<li><%= link_to 'Change Log', change_log_path %></li>
+				<li>Added Terms controller to enable handling of our Terms and Policy pages</li>
+				<li>More style changes, coming closer to finializing most page layouts</li>
+				<li>More content written on Road Map</li>
+			</ul>
+		</div>	
+	</div>
+
+
+	<div class="panel panel-info">
+		<div class="panel-heading">
 			<h5><strong>v.0.0.1 - 02/13/2014</strong></h5>
 		</div>
 		<div class="panel-body">
