--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -17,6 +17,8 @@
 			</div>
 		</div>
 		<div class="col-md-8">
+
+			<div id="intro"></div>
 			<h2>Introduction</h2>
 			<p>I've started working on what I'm calling 'KingVideo' while in development because of my frustrations with YouTube and how they deal with content creators. Orignally I wished to create a site where myself and a few friends could upload videos and share them with everyone (from my own server) but after learning of the technical requirements of a project that scale I decided to refine my goals into something more managable and possible with my low budget.</p> 
 
@@ -31,6 +33,8 @@
 		<div class="col-md-4">
 		</div>
 		<div class="col-md-8">
+
+			<div id="watching"></div>
 			<h2>Watching</h2>
 			<p>Watching videos is clearly the primary goal of the project. I wanted a way to share MY videos with my viewers away from YouTube and still be able to package it into a clean format that is less derpy than PlayLists. </p> 
 			<p>I've also decided for this project I want a number of features to be possible, such as password protected videos. In addition I also would like to do more with the "private" video feature there is on YouTube though I'm not sure how or what that'll be yet. </p>
@@ -41,6 +45,7 @@
 		<div class="col-md-4">
 		</div>
 		<div class="col-md-8">
+			<div id="uploading"></div>
 			<h2>Uploading</h2>
 			<p>One of the goals was to break the dependency from YouTube however bandwidth is still expensive and transferring large amounts of data does not come cheap. So the costs to provide my own videos to viewers is sadly too-high for me to handle. Due to this I've shifted my focus to creating the site/features around the videos but still allow me to host the video elsewhere (or on my own servers in the future). </p>
 
