Terms Section Changes

--- a/app/views/terms/aup.html.erb
+++ b/app/views/terms/aup.html.erb
@@ -1,2 +1,21 @@
-<h1>Terms#aup</h1>
-<p>Find me in app/views/terms/aup.html.erb</p>
+<div class="well">
+	<div class="page-header">
+		<h1>AUP</h1>
+		</div>
+	<div class="row">
+		<div class="col-md-4">
+
+			<div class="well well-sm">
+				<ul class="nav nav-pills nav-stacked">
+					<li><%= link_to 'Terms Home', terms_path %></li>
+		  			<li class="active"><%= link_to 'Acceptable Use Policy', aup_path %></li>
+		  			<li><%= link_to 'Privacy', privacy_path %></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-md-8">
+			<p>I hate terms and policies on sites.. shame I have to come up with some for this</p> 
+		</div>
+		
+	  </div>
+</div>
