--- a/app/assets/stylesheets/bootstrap_and_customizations.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customizations.css.scss
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 $body-bg: #ecf0f1;
 $font-family-sans-serif:               'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-inverse-bg: #669900; //#2c3e50 -- the blue: 3498db
+$navbar-inverse-bg: #669900; //green: 669900//#2c3e50 -- the blue: 3498db
 $navbar-height: 65px;
 $navbar-inverse-link-color: white;
 $brand-primary: #669900; //#c0392b
