--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -7,8 +7,9 @@
 
 			<div class="well well-sm">
 				<ul class="nav nav-pills nav-stacked">
-		  			<li class="active"><%= link_to 'AUP', 'terms/aup' %></li>
-		  			<li><%= link_to 'Privacy', 'terms/privacy' %></li>
+					<li class="active"><%= link_to 'Terms Home', terms_path %></li>
+		  			<li><%= link_to 'Acceptable Use Policy', aup_path %></li>
+		  			<li><%= link_to 'Privacy', privacy_path %></li>
 				</ul>
 			</div>
 		</div>
