--- a/app/views/pages/watch.html.erb
+++ b/app/views/pages/watch.html.erb
@@ -1,8 +1,9 @@
 <div class="well">
 
-<div class="page-header">
-	<h1>Minecraft: King's First World / Episode 1 - Memory Lane </h1>
-</div>
+	<div class="page-header">
+		<h1>Minecraft: King's First World / Episode 1 - Memory Lane </h1>
+	</div>
+	
 	<div class="row">
 		<div class="col-md-7">
 			<iframe width="640" height="360" src="//www.youtube.com/embed/ROPeCVUIUYQ?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -30,28 +31,27 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<div class="panel panel-info">
-				<div class="panel-body">
-					<div class="pull-left">
-						<img src="https://pbs.twimg.com/profile_images/2327720753/pncsl3exa97o8ako1y8u_bigger.png" class="img-rounded"/> 
-					</div>
-
-					<h2><strong>Kaptoye</strong> 
+			<div class="panel panel-default">
+					  <div class="panel-body">
+					  King is an awesome dude who just wants to make videos for ever and ever and ever and this is his site that he made and put a ton of work in. Does this make his content look fat? Just kidding we all know it's fat as heck. Ok you can go now. I just wanted to test out a 'Content Creators about section'
+					  </div>
+  					  <div class="panel-body">
+  					  	<div class="pull-left">
+							<img src="https://pbs.twimg.com/profile_images/2327720753/pncsl3exa97o8ako1y8u_bigger.png" class="img-rounded"/> 
+						</div>
+						<strong>Kaptoye</strong> 
 						<small>1230 Videos</small>
 
 
-					<div class="pull-right">
-						<p class="bg-info">1 view</p>
-					</div></h2>
+							<div class="pull-right">
+								<p class="bg-info">1 view</p>
+							</div>
+						
+					  </div>
 
-					<div>
-						<hr />
-					</div>
-					<p>King is an awesome dude who just wants to make videos for ever and ever and ever and this is his site that he made and put a ton of work in. Does this make his content look fat? Just kidding we all know it's fat as heck. Ok you can go now. I just wanted to test out a 'Content Creators about section'</p>
-				</div>
 			</div>
-		</div>
-
+				
+		</div>  <!-- End 12 col. section -->
 	</div> <!-- End Row -->
 </div> 
 </div> <!-- Close the Page Content Well -->
